--- a/src/app/ui/page1/page.css
+++ b/src/app/ui/page1/page.css
@@ -36,19 +36,19 @@
 
 
 
-.image-clip-horizontal img {
-    /*object-position: center center;*/
-    object-fit: cover;
-}
+/*.image-clip-horizontal img {*/
+/*    !*object-position: center center;*!*/
+/*    object-fit: cover;*/
+/*}*/
 
-.image-clip-horizontal {
-    overflow: hidden;
-}
+/*.image-clip-horizontal {*/
+/*    overflow: hidden;*/
+/*}*/
 
 @media (min-width: 768px) {
-    .image-clip-horizontal {
-        clip-path: url(#curve-clip-horizontal) !important;
-    }
+    /*.image-clip-horizontal {*/
+    /*    clip-path: url(#curve-clip-horizontal) !important;*/
+    /*}*/
 
     /*.image-clip-horizontal img {*/
     /*    object-position: center center;*/
